small overflow fix [2nd try]

--- a/apps/web/assets/stylesheets/main.css
+++ b/apps/web/assets/stylesheets/main.css
@@ -34,20 +34,26 @@ body {
 	padding-bottom: 0.5rem;
 
 	background-color: #303040;
-
-	white-space: pre-wrap;
-	word-wrap: break-word;
 }
 
-.podcast h2 {
+.podcast h2 {	
+	white-space: pre-wrap;
+	word-wrap: break-word;
+
 	color: #9090aa;
 }
 
-.podcast p {
+.podcast p {	
+	white-space: pre-wrap;
+	word-wrap: break-word;
+
 	color: #787894;
 }
 
-.podcast a {
+.podcast a {	
+	white-space: pre-wrap;
+	word-wrap: break-word;
+
 	color: #dcac55;
 	text-decoration: none;
 }
